src/test/deca/context/invalid/classmethode20.deca
class A{}
{
    A a;
    a instanceof int;
}